# llm-orchestrator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
orchestrator/: __init__.py  __main__.py  cli.py  config.py  context_builder.py  handoff_generator.py  models.py  project_layout.py  repair_loop.py  retrieval_engine.py  stage_router.py  state_manager.py  task_logger.py  templates.py  tool_executor.py  trajectory_store.py  verification_runner.py  workspace_manager.py
tests/: test_cli.py
