[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-orchestrator"
version = "0.1.0"
description = "Deterministic local orchestration for multi-model AI development workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" },
]

[project.scripts]
orchestrator = "orchestrator.cli:main"

[tool.setuptools]
packages = ["orchestrator"]
